--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     .badge .name { border-bottom:1px dashed transparent; cursor:text; }
     .badge .name:hover { border-bottom-color: rgba(255,255,255,.4); }
     .count { background:rgba(255,255,255,.12); padding:2px 6px; border-radius:999px; font-size:11px; }
-    .actions { position:absolute; left:50%; bottom:8px; transform:translateX(-50%); display:flex; gap:6px; z-index:2; }
+    .actions { position:absolute; left:50%; bottom:8px; transform:translateX(-50%); display:flex; gap:8px; z-index:2; }
     .actions button { font-size:12px; background:rgba(255,255,255,.18); }
     .video { position:absolute; inset:0; display:flex; align-items:center; justify-content:center; }
     .video iframe { width:100%; height:100%; border:0; object-fit:contain; background:#000; }
@@ -38,7 +38,6 @@
 
   <script>
     // ---- Loose-matching default names ----
-    // We'll normalize keys and incoming IDs/names by removing non-alphanumerics and uppercasing.
     const RAW_DEFAULT_NAMES = {
       "QTL07-W02STR003": "Andrew",
       "QTL13-W02STR013": "Andrew",
@@ -50,7 +49,7 @@
       "QTL08-W01STR004": "Shawn",
       "QTL10-W02STR010": "Israel",
       "QTL11-W02STR011": "Phil",
-      "QTL 16-W03STR001": "Nuria",     // includes space variant
+      "QTL 16-W03STR001": "Nuria",
       "QTL16-W03STR001": "Nuria",
       "MX QTL-W13STR002": "Aurora",
       "MXQTL-W13STR002": "Aurora",
@@ -61,7 +60,7 @@
     const norm = (s) => String(s||"").toUpperCase().replace(/[^A-Z0-9]/g, "");
     const DEFAULT_NAMES = Object.fromEntries(Object.entries(RAW_DEFAULT_NAMES).map(([k,v]) => [norm(k), v]));
 
-    const TARGET_RATIO = 16/9; // layout uses this for grid sizing; videos use 'contain' to preserve their own ratio
+    const TARGET_RATIO = 16/9; // for layout grid math
 
     let tiles = []; // {id,name,url,viewers,visible,_dom?}
     let grid, header, stage, lastUpdateEl;
@@ -101,6 +100,28 @@
       grid.style.gridTemplateRows = `repeat(${rows}, 1fr)`;
     }
 
+    function ensureMutedParams(url) {
+      try {
+        const u = new URL(url, window.location.href);
+        // Add both forms in case the player supports one or the other
+        u.searchParams.set('muted', 'true');
+        u.searchParams.set('mute', 'true');
+        // Some players honor 'autoplay' flag too
+        u.searchParams.set('autoplay', 'true');
+        return u.toString();
+      } catch {
+        // if URL constructor fails (e.g., empty), just return original
+        return url;
+      }
+    }
+
+    function requestFullscreen(el) {
+      if (el.requestFullscreen) return el.requestFullscreen();
+      if (el.webkitRequestFullscreen) return el.webkitRequestFullscreen();
+      if (el.mozRequestFullScreen) return el.mozRequestFullScreen();
+      if (el.msRequestFullscreen) return el.msRequestFullscreen();
+    }
+
     function render() {
       grid.innerHTML = '';
       tiles.forEach((t, i) => {
@@ -137,7 +158,10 @@
         v.className = 'video';
         const iframe = document.createElement('iframe');
         iframe.allow = 'autoplay; fullscreen';
-        iframe.src = t.url || 'about:blank';
+        iframe.setAttribute('allowfullscreen', '');
+        iframe.setAttribute('webkitallowfullscreen', '');
+        iframe.setAttribute('mozallowfullscreen', '');
+        iframe.src = ensureMutedParams(t.url || '');
         v.appendChild(iframe);
         d.appendChild(v);
 
@@ -146,8 +170,15 @@
         const hideBtn = document.createElement('button');
         hideBtn.textContent = 'Hide';
         hideBtn.onclick = ()=> { t.visible = false; render(); layout(); };
+        const fsBtn = document.createElement('button');
+        fsBtn.textContent = 'Fullscreen';
+        fsBtn.onclick = ()=> requestFullscreen(d);
         actions.appendChild(hideBtn);
+        actions.appendChild(fsBtn);
         d.appendChild(actions);
+
+        // Also allow double-click to fullscreen anywhere on the tile
+        d.ondblclick = ()=> requestFullscreen(d);
 
         t._dom = { countEl: count, nameEl: nameSpan };
         grid.appendChild(d);
@@ -158,10 +189,8 @@
     function pickDefaultName(id, serverName) {
       const nId = norm(id);
       const nSrv = norm(serverName);
-      // Direct lookup
       if (DEFAULT_NAMES[nId]) return DEFAULT_NAMES[nId];
       if (DEFAULT_NAMES[nSrv]) return DEFAULT_NAMES[nSrv];
-      // Soft match: if any key is contained in the id/name or vice versa
       for (const [k, v] of Object.entries(DEFAULT_NAMES)) {
         if (nId.includes(k) || k.includes(nId) || nSrv.includes(k) || k.includes(nSrv)) {
           return v;
@@ -180,25 +209,23 @@
         if (existing) {
           existing.viewers = s.viewers ?? existing.viewers ?? null;
           if (existing._dom?.countEl) existing._dom.countEl.textContent = (existing.viewers ?? '-') + '';
-          // Only update the name if user hasn't customized locally
           if (!localStorage.getItem(nameKey(id))) {
-            const fallback = pickDefaultName(id, s.name);
-            existing.name = fallback;
-            if (existing._dom?.nameEl) existing._dom.nameEl.textContent = fallback;
+            const preferred = pickDefaultName(id, s.name);
+            existing.name = preferred;
+            if (existing._dom?.nameEl) existing._dom.nameEl.textContent = preferred;
           }
         } else {
           const savedName = localStorage.getItem(nameKey(id));
-          const fallback = pickDefaultName(id, s.name);
+          const starting = savedName || pickDefaultName(id, s.name);
           tiles.push({
             id,
-            name: savedName || fallback,
+            name: starting,
             url: s.playerUrl || '',
             viewers: s.viewers ?? null,
             visible: true
           });
         }
       });
-      // Hide streams that are no longer active
       tiles = tiles.map(t => newIds.has(t.id) ? t : ({ ...t, visible: false }));
     }
 
@@ -220,8 +247,8 @@
         tiles = list.map(s => {
           const id = s.id || s.name || s.playerUrl;
           const savedName = localStorage.getItem(nameKey(id));
-          const fallback = pickDefaultName(id, s.name);
-          return { id, name: savedName || fallback, url: s.playerUrl || '', viewers: s.viewers ?? null, visible: true };
+          const starting = savedName || pickDefaultName(id, s.name);
+          return { id, name: starting, url: s.playerUrl || '', viewers: s.viewers ?? null, visible: true };
         });
         render();
         lastUpdateEl.textContent = `Updated ${new Date().toLocaleTimeString()}`;
